<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    tools:context=".AddActivity">
    <include layout="@layout/my_action_bar"/>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/text_bule"
            android:text="@string/orderClassroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvRoom"
            android:paddingLeft="20dp"
            android:hint="@string/no_sel"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/text_bule"
            android:text="@string/item_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvStartTime"
            android:paddingLeft="20dp"
            android:hint="@string/no_sel"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_end_time"
            android:textColor="@color/text_bule"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/tvEndTime"
            android:paddingLeft="20dp"
            android:hint="@string/no_sel"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/text_bule"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/etStuNum"
            android:background="@null"
            android:paddingLeft="20dp"
            android:hint="@string/no_write"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/text_bule"
            android:text="@string/peopleNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPeoNum"
            android:background="@null"
            android:paddingLeft="20dp"
            android:hint="@string/no_write"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/text_bule"
            android:text="@string/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etContent"
            android:background="@null"
            android:paddingLeft="20dp"
            android:hint="@string/no_write"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:background="@drawable/btn_red_corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>