<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:text=""/>

        <LinearLayout
            android:background="@drawable/edt_grey_corners"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            >

            <ImageView
                android:src="@drawable/sign_sno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/etUserName"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:textSize="16dp"
                android:layout_gravity="center_vertical"
                android:textColorHint="#ffffff"
                android:hint="@string/uesr_name"/>

        </LinearLayout>



        <LinearLayout
            android:background="@drawable/edt_grey_corners"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            >

            <ImageView
                android:src="@drawable/sign_cipher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:textSize="16dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/password"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn_login_corners"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16dp"/>




    </LinearLayout>


</RelativeLayout>