<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    tools:context=".DeatilsActivity">
    <include layout="@layout/my_action_bar"/>
    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivImg"
            android:scaleType="fitXY"
            android:src="@drawable/details_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_alignBottom="@+id/ivImg"
            android:background="@drawable/details_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvRoom"
            android:layout_alignBottom="@+id/ivImg"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/details_shool"
            android:drawablePadding="10dp"
            android:textSize="14dp"
            android:text="a-103"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTime"
            android:layout_alignBottom="@+id/ivImg"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/details_time"
            android:drawablePadding="10dp"
            android:textSize="14dp"
            android:text="2019/03/10 09:00-09:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/details_sno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/text_bule"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/tvStuNum"
            android:paddingLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/details_staff"
            android:textSize="18dp"
            android:textColor="@color/text_green"
            android:text="@string/peopleNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPeoNum"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/white_corners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/details_use"
            android:textSize="18dp"
            android:textColor="@color/light_red"
            android:text="@string/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvContent"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCancle"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18dp"
        android:text="@string/cancle"
        android:textColor="@color/white"
        android:background="@drawable/btn_org_corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>